tests/baselines/reference/inferentialTypingWithFunctionTypeNested.errors.txt
tests/cases/compiler/inferentialTypingWithFunctionTypeNested.ts(4,13): error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.


==== tests/cases/compiler/inferentialTypingWithFunctionTypeNested.ts (1 errors) ====
    declare function map<T, U>(x: T, f: () => { x: (s: T) => U }): U;
    declare function identity<V>(y: V): V;
    
    var s = map("", () => { return { x: identity }; });
                ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'U'.